[gd_scene load_steps=9 format=3 uid="uid://dspi4ceixg7up"]

[ext_resource type="Script" path="res://maps/cellblock.gd" id="1_almdm"]
[ext_resource type="PackedScene" uid="uid://t5gsajylibsm" path="res://characters/player.tscn" id="1_nv5e4"]
[ext_resource type="Texture2D" uid="uid://b5leyo3t37yi6" path="res://Sprites/Sprite-floor.png" id="2_owtke"]
[ext_resource type="PackedScene" uid="uid://b01te41i4yyyf" path="res://objects/dining_table.tscn" id="2_taqxq"]
[ext_resource type="PackedScene" uid="uid://bqrt76h7epauo" path="res://objects/cafeteria_table.tscn" id="3_5wfex"]
[ext_resource type="PackedScene" uid="uid://clavkaxcrmpxp" path="res://objects/guard.tscn" id="3_vgg3u"]
[ext_resource type="PackedScene" path="res://maps/background.tscn" id="6_jqw4y"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_j7pi5"]
vertices = PackedVector2Array(321, 7, 1461, 24, 1452, 2399, 854.892, 2389.76, 354, 2382)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4)])
outlines = Array[PackedVector2Array]([PackedVector2Array(321, 7, 1461, 24, 1452, 2399, 854.892, 2389.76, 354, 2382)])

[node name="cafeteria" type="Area2D"]
script = ExtResource("1_almdm")
metadata/_edit_horizontal_guides_ = [-866.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(836, 1363)
rotation = -1.5708
scale = Vector2(0.626752, 0.971126)
texture = ExtResource("2_owtke")
region_enabled = true
region_rect = Rect2(1466.54, -51.4202, 6065.47, 2723.43)

[node name="guard_1" parent="Sprite2D" instance=ExtResource("3_vgg3u")]
position = Vector2(1517.35, 213.158)
scale = Vector2(1.3, 1.3)

[node name="guard_2" parent="Sprite2D" instance=ExtResource("3_vgg3u")]
position = Vector2(1067.41, -257.431)
scale = Vector2(1.3, 1.3)

[node name="guard_3" parent="Sprite2D" instance=ExtResource("3_vgg3u")]
position = Vector2(1517.35, -747.582)
scale = Vector2(1.3, 1.3)

[node name="guard_4" parent="Sprite2D" instance=ExtResource("3_vgg3u")]
position = Vector2(1539.69, -264.638)
scale = Vector2(1.3, 1.3)

[node name="guard_5" parent="Sprite2D" instance=ExtResource("3_vgg3u")]
position = Vector2(590.346, -247.134)
scale = Vector2(1.3, 1.3)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Sprite2D"]
position = Vector2(1804.55, -1171.3)
rotation = 1.5708
navigation_polygon = SubResource("NavigationPolygon_j7pi5")

[node name="Player2" parent="." instance=ExtResource("1_nv5e4")]
position = Vector2(177, 141)

[node name="Camera2D" type="Camera2D" parent="Player2"]
position = Vector2(-2, 4)
limit_left = -5
limit_top = -15
limit_right = 1150
limit_bottom = 1850
position_smoothing_enabled = true

[node name="Table_1" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(325, 547)
rotation = -3.14159
scale = Vector2(2, 2)

[node name="Table_3" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(838, 1258)
rotation = -3.14159
scale = Vector2(2, 2)

[node name="Table_4" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(1656, 563)
rotation = -3.14159
scale = Vector2(2, 2)

[node name="Table_2" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(826, 598)
scale = Vector2(2, 2)

[node name="Table_5" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(313, 1337)
scale = Vector2(2, 2)

[node name="Table_6" parent="." instance=ExtResource("2_taqxq")]
position = Vector2(1642, 1336)
scale = Vector2(2, 2)

[node name="Node2D" parent="." instance=ExtResource("3_5wfex")]
position = Vector2(507, 1796)
scale = Vector2(2, 2)

[node name="Background" parent="." instance=ExtResource("6_jqw4y")]
position = Vector2(562, -18)
scale = Vector2(20, 1)

[node name="Background2" parent="." instance=ExtResource("6_jqw4y")]
position = Vector2(562, 1868)
scale = Vector2(20, 1)

[node name="Background3" parent="." instance=ExtResource("6_jqw4y")]
position = Vector2(2, 926)
rotation = 1.5708
scale = Vector2(35, 1)

[node name="Background4" parent="." instance=ExtResource("6_jqw4y")]
position = Vector2(1152, 933)
rotation = 1.5708
scale = Vector2(35, 1)

[connection signal="earth" from="Player2" to="." method="_on_player_earth"]
[connection signal="earth" from="Player2" to="." method="_on_player_2_earth"]
[connection signal="fire" from="Player2" to="." method="_on_player_fire"]
[connection signal="ice" from="Player2" to="." method="_on_player_ice"]
[connection signal="lightning" from="Player2" to="." method="_on_player_lightning"]
[connection signal="magicmissle" from="Player2" to="." method="_on_player_magicmissle"]
[connection signal="stun" from="Player2" to="." method="_on_player_stun"]
